Bug 1717246 - Set `text-align-last: end` on ::marker. r=emilio,firefox-style-system-reviewers,dshin
`text-align` was already set to `end`, but it isn't implemented as a
shorthand including `text-align-last`, so the latter needs to be set
manually.

In practice this prevents the ::marker from inheriting the value from
its originating element, since `text-align-last` shouldn't apply
according to https://drafts.csswg.org/css-lists/#marker-properties

Differential Revision: https://phabricator.services.mozilla.com/D265257

--- a/layout/style/res/ua.css
+++ b/layout/style/res/ua.css
@@ -138,6 +138,7 @@
 ::before::marker,
 ::after::marker {
   text-align: end;
+  text-align-last: end;
   text-transform: none;
   unicode-bidi: isolate;
   font-variant-numeric: tabular-nums;
